# model-envelope

./: .gitignore  Makefile  README.md  requirements-graph-full.txt  requirements-graph-model.txt  run.sh
example/serve-fastapi/: Dockerfile  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run.sh
example/serve-fastapi/src/serve_fastapi/: __init__.py  app.py  models.py
example/train-pytorch/: eda.ipynb  pyproject.toml  requirements-graph-full.txt  requirements-graph-model.txt  requirements-graph.txt
example/train-pytorch/src/train_pytorch/: constants.py  dataset.py  envelope.py  model.py  train.py  wrapper.py  wrapper_save.py
model-envelope/: Makefile  pyproject.toml
model-envelope/src/model_envelope/: __init__.py  freeze_deps.py  freeze_deps_tree.py  git_meta.py
model-envelope/tests/: test_freeze_deps.py
