[project]
name = "model-envelope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pipdeptree==2.23.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "rich>=13.9.4",
]

[tool.uv.workspace]
members = ["tests/artifacts/basic"]
