[project]
name = "train-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "jupyterlab[dev]>=4.3.1",
    "polars>=1.14.0",
    "mlflow-skinny>=2.18.0",
    "scikit-learn>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.1",
    "mlflow>=2.18.0",
]
