[project]
name = "train-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "polars>=1.14.0",
    "mlflow-skinny>=2.18.0",
    "scikit-learn>=1.5.2",
    "model-envelope",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.1",
    "mlflow>=2.18.0",
]

[tool.uv.sources]
model-envelope = { path = "../../model-envelope", editable = true }
